src/objects/Sales_team_mapping__mdt.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Consumables</fullName>
                    <default>true</default>
                    <label>Consumables</label>
                </value>
                <value>
                    <fullName>Implants</fullName>
                </value>
                <value>
                    <fullName>Digital</fullName>
                </value>
                <value>
                    <fullName>Endodontics</fullName>
                </value>
                <value>
                    <fullName>Orthodontics</fullName>
                </value>
                <value>
                    <fullName>Preventive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>BE</fullName>
                    <default>true</default>
                    <label>BE</label>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>DK</fullName>
                </value>
                <value>
                    <fullName>ES</fullName>
                </value>
                <value>
                    <fullName>FR</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>NL</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
                <value>
                    <fullName>SE</fullName>
                </value>
                <value>
                    <fullName>UK</fullName>
                </value>
                <value>
                    <fullName>US</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Territory_role__c</fullName>
        <label>Territory role</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Clinical Development Manager</fullName>
                    <default>true</default>
                    <label>Clinical Development Manager</label>
                </value>
                <value>
                    <fullName>Sales Rep (IMPL)</fullName>
                </value>
                <value>
                    <fullName>Sales Rep (ORTH)</fullName>
                </value>
                <value>
                    <fullName>Sales Rep (PREV)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Sales team mapping</label>
    <pluralLabel>Sales team mappings</pluralLabel>
</CustomObject>